<resources>
    <string name="app_name">L08_songRating</string>
    <string name="heading">Save your favourite songs!</string>
    <string name="title">Song Title</string>
    <string name="titleHint">Enter song title here</string>
    <string name="singer">Singers</string>
    <string name="singerHint">Enter singers\' name here</string>
    <string name="year">Year</string>
    <string name="yearHint">Enter year of release here</string>
    <string name="stars">Stars</string>
    <string name="show5stars">Show all songs with 5 stars</string>
    <string name="id">ID</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="cancel">Cancel</string>
</resources>